updated readme file, cleaned up all sections so they have flex wrap and are screen responsive. ensured all links work.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,6 @@
 
 :root {
 --dark: #343a40;
---light: #f8f9fa;
 --midlight: #e9e6e9;
 }
 
@@ -28,9 +27,8 @@ a {
 a:hover {
   border-bottom: 5px solid var(--dark);
   font-weight: lighter;
+  color: #bababa;
 }
-
-
 
 /* navbar  */
 
@@ -111,6 +109,15 @@ a:hover {
   object-fit: cover;
 }
 
+.portfolioGrid a {
+  color: var(--dark);
+  text-decoration: none;
+}
+
+.portfolioGrid a:hover {
+  border-bottom: 5px solid var(--dark);
+  opacity: 60%;
+}
 
 /*  skills section  */
 
@@ -119,8 +126,7 @@ a:hover {
   padding: 40px 20px 20px 20px;
   display: flex;
   flex-flow: row wrap;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
 
   gap: .5em;
   margin-bottom: 50px;
@@ -129,7 +135,15 @@ a:hover {
 
 /*  contact section   */
 
-.aboutMe {
+.aboutMeContainer {
+  padding-right: 20px;
+  padding-left: 20px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  text-align: justify;
+
+  gap: 0.5em;
   margin-bottom: 50px;
 }
 
@@ -146,12 +160,13 @@ a:hover {
 
 /*  footer  */
 
-.footerBk {
+.footerContainer {
   background-color: var(--dark);
   padding: 40px;
   color: var(--light);
   display: flex;
-  justify-content: space-between;
+  flex-flow: row wrap;
+  justify-content: space-around;
   gap: 1em;
   font-weight: bold;
 }
